--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1019,6 +1019,22 @@ select {
   height: auto;
 }
 
+.h-\[90vh\] {
+  height: 90vh;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[85vh\] {
+  height: 85vh;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .max-h-\[800px\] {
   max-height: 800px;
 }
@@ -1029,6 +1045,10 @@ select {
 
 .min-h-full {
   min-height: 100%;
+}
+
+.min-h-\[50px\] {
+  min-height: 50px;
 }
 
 .w-10 {
@@ -1059,6 +1079,10 @@ select {
   width: 5rem;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1073,6 +1097,10 @@ select {
 
 .min-w-\[350px\] {
   min-width: 350px;
+}
+
+.min-w-\[250px\] {
+  min-width: 250px;
 }
 
 .max-w-2xl {
@@ -1168,6 +1196,18 @@ select {
 
 .gap-y-4 {
   row-gap: 1rem;
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1355,6 +1395,16 @@ select {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pb-3 {
@@ -1656,6 +1706,11 @@ select {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[\#eb7b91\]:hover {
   --tw-text-opacity: 1;
   color: rgb(235 123 145 / var(--tw-text-opacity));
@@ -1845,6 +1900,10 @@ select {
     width: 100%;
   }
 
+  .sm\:w-60 {
+    width: 15rem;
+  }
+
   .sm\:max-w-lg {
     max-width: 32rem;
   }
@@ -1855,6 +1914,10 @@ select {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -1962,6 +2025,10 @@ select {
 @media (min-width: 768px) {
   .md\:w-60 {
     width: 15rem;
+  }
+
+  .md\:w-1 {
+    width: 0.25rem;
   }
 
   .md\:min-w-\[500px\] {
